Media query for severity distribution chart added to fix the height issue on mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,8 +18,8 @@ h1 {
 }
 
 .section {
-    margin-bottom: 15px;
-    margin-top: 15px;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 
@@ -58,6 +58,10 @@ select {
 #accidents-hour, #accidents-month {
     height: 300px;
     width: 750px;
+}
+
+#severity-distribution {
+    height: 360px;
 }
 
 /* MEDIA QUERIES */
@@ -110,7 +114,12 @@ select {
     #accidents-hour, #accidents-month {
         height: 120px;
     }
+}
 
+@media only screen and (max-width: 375px) {
+    #severity-distribution{
+        height: 250px;
+    }
 }
 
 
